--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"start": "node src/index.js",
 		"prettier:check": "prettier . --check",
 		"prettier:write": "prettier . --write"
 	},
@@ -11,8 +12,10 @@
 	"license": "ISC",
 	"devDependencies": {
 		"dotenv": "^16.3.1",
-		"eslint": "^8.48.0",
 		"jest": "^29.6.4",
 		"prettier": "^3.0.3"
+	},
+	"dependencies": {
+		"express": "^4.18.2"
 	}
 }
