--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"main": "index.js",
 	"scripts": {
 		"start": "node src/index.js",
+		"dev": "nodemon src/index.js",
 		"prettier:check": "prettier . --check",
 		"prettier:write": "prettier . --write"
 	},
@@ -13,9 +14,12 @@
 	"devDependencies": {
 		"dotenv": "^16.3.1",
 		"jest": "^29.6.4",
-		"prettier": "^3.0.3"
+		"nodemon": "^3.0.1",
+		"prettier": "^3.0.3",
+		"prisma": "^5.2.0"
 	},
 	"dependencies": {
+		"@prisma/client": "^5.2.0",
 		"express": "^4.18.2"
 	}
 }
