--- a/package.json
+++ b/package.json
@@ -3,23 +3,23 @@
 	"version": "1.0.0",
 	"description": "",
 	"main": "index.js",
+	"type": "module",
 	"scripts": {
-		"start": "node src/index.js",
-		"dev": "nodemon src/index.js",
+		"start": "node src/server.js",
+		"dev": "nodemon src/server.js",
 		"prettier:check": "prettier . --check",
 		"prettier:write": "prettier . --write"
 	},
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"dotenv": "^16.3.1",
 		"jest": "^29.6.4",
 		"nodemon": "^3.0.1",
-		"prettier": "^3.0.3",
-		"prisma": "^5.2.0"
+		"prettier": "^3.0.3"
 	},
 	"dependencies": {
-		"@prisma/client": "^5.2.0",
+		"bcryptjs": "^2.4.3",
+		"dotenv": "^16.3.1",
 		"express": "^4.18.2"
 	}
 }
