--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
 	"scripts": {
 		"start": "node src/server.js",
 		"dev": "nodemon src/server.js",
+		"test:unit": "vitest",
 		"prettier:check": "prettier . --check",
 		"prettier:write": "prettier . --write"
 	},
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"jest": "^29.6.4",
 		"nodemon": "^3.0.1",
-		"prettier": "^3.0.3"
+		"prettier": "^3.0.3",
+		"vitest": "^0.34.4"
 	},
 	"dependencies": {
+		"axios": "^1.5.0",
 		"bcryptjs": "^2.4.3",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2"
