--- a/package.json
+++ b/package.json
@@ -7,30 +7,22 @@
 	"scripts": {
 		"start": "node src/server.js",
 		"dev": "nodemon src/server.js",
-		"test:unit": "jest",
+		"test:unit": "vitest",
 		"prettier:check": "prettier . --check",
 		"prettier:write": "prettier . --write"
 	},
 	"author": "",
 	"license": "ISC",
 	"devDependencies": {
-		"@babel/core": "^7.22.20",
-		"@babel/preset-env": "^7.22.20",
 		"axios-mock-adapter": "^1.22.0",
-		"babel-jest": "^29.7.0",
-		"jest": "^29.7.0",
 		"nodemon": "^3.0.1",
-		"prettier": "^3.0.3"
+		"prettier": "^3.0.3",
+		"vitest": "^0.34.5"
 	},
 	"dependencies": {
 		"axios": "^1.5.0",
 		"bcryptjs": "^2.4.3",
 		"dotenv": "^16.3.1",
 		"express": "^4.18.2"
-	},
-	"jest": {
-		"transform": {
-			"^.+\\.js$": "babel-jest"
-		}
 	}
 }
