--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
 		"axios-mock-adapter": "^1.22.0",
 		"nodemon": "^3.0.1",
 		"prettier": "^3.0.3",
+		"prisma": "^5.3.1",
 		"vitest": "^0.34.5"
 	},
 	"dependencies": {
+		"@prisma/client": "^5.3.1",
 		"axios": "^1.5.0",
 		"bcryptjs": "^2.4.3",
 		"dotenv": "^16.3.1",
