Rota de registro e jwt concluidos

--- a/.env
+++ b/.env
@@ -1,3 +1,18 @@
 PORT=3000
 
-DATABASE_URL="mysql://root:huAakdbijSetG1ZyBpCC@containers-us-west-31.railway.app:7153/railway"
+DATABASE_URL="mysql://root:gOSYRfDo17NPOp1xFyc4@containers-us-west-116.railway.app:7717/railway"
+
+
+# nodemailer
+EMAIL_HOST=sandbox.smtp.mailtrap.io
+EMAIL_PORT=587
+EMAIL_USER=4841d0372f7e96
+EMAIL_PASS=3d77336b961746
+EMAIL_SENDER='teste@sender.com<teste@sender.com>'
+
+
+# jtw
+JWT_SECRET='d7a73@s#Xa55WD4xF)$0qv1$'
+
+
+SITE_URL='http://localhost:3001'
