--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
 	"license": "ISC",
 	"devDependencies": {
 		"axios-mock-adapter": "^1.22.0",
+		"mock-knex": "^0.4.12",
 		"nodemon": "^3.0.1",
 		"prettier": "^3.0.3",
 		"prisma": "^5.3.1",
@@ -25,6 +26,8 @@
 		"axios": "^1.5.0",
 		"bcryptjs": "^2.4.3",
 		"dotenv": "^16.3.1",
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"jsonwebtoken": "^9.0.2",
+		"nodemailer": "^6.9.5"
 	}
 }
