--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 
-DATABASE_URL="mysql://root:gOSYRfDo17NPOp1xFyc4@containers-us-west-116.railway.app:7717/railway"
+DATABASE_URL="mysql://root:PAETcRwLYK2U7xbIlqlf@containers-us-west-183.railway.app:6533/railway"
 
 
 # nodemailer
