Rota `check-all-schedules`

--- a/.env
+++ b/.env
@@ -1,18 +1,18 @@
 PORT=3000
 
-DATABASE_URL="mysql://root:PAETcRwLYK2U7xbIlqlf@containers-us-west-183.railway.app:6533/railway"
+DATABASE_URL="mysql://root:UKULN4xMIWTgDZcnXLMp@containers-us-west-142.railway.app:6742/railway"
 
 
 # nodemailer
 EMAIL_HOST=sandbox.smtp.mailtrap.io
 EMAIL_PORT=587
-EMAIL_USER=**
-EMAIL_PASS=**
+EMAIL_USER=01b2ed6bbbe36f
+EMAIL_PASS=15532110bf9e72
 EMAIL_SENDER='teste@sender.com<teste@sender.com>'
 
 
 # jtw
-JWT_SECRET='**'
+JWT_SECRET='jwtTestee'
 
 
 SITE_URL='http://localhost:3001'
