função agendadora `DateScheduler`

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT=3000
 
-DATABASE_URL="mysql://root:UKULN4xMIWTgDZcnXLMp@containers-us-west-142.railway.app:6742/railway"
+DATABASE_URL="mysql://root:XeJlRIdvG2rNiG9Nww1g@containers-us-west-156.railway.app:5997/railway"
 
 
 # nodemailer
