--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
 		"express": "^4.18.2",
 		"jsonwebtoken": "^9.0.2",
 		"nodemailer": "^6.9.5"
+	},
+	"prisma": {
+		"seed": "node prisma/seed.js"
 	}
 }
