--- a/compose.yaml
+++ b/compose.yaml
@@ -5,3 +5,8 @@ services:
       - .env
     ports:
       - '5432:5432'
+    volumes:
+      - pgdata:/var/lib/postgresql/data
+
+volumes:
+  pgdata:
