--- a/exemple.env
+++ b/exemple.env
@@ -1,35 +1,38 @@
-## You should create your own .env file ##
-
 PORT=3000
 
-DATABASE_URL="mysql://root: @ : /"
+POSTGRES_USER=db_user
+POSTGRES_PASSWORD=db_pass
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=db_db
+POSTGRES_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 
 
 # nodemailer
-EMAIL_HOST=sandbox.smtp.mailtrap.io
-EMAIL_PORT=587
+EMAIL_HOST=
+EMAIL_PORT=
 EMAIL_USER=
 EMAIL_PASS=
 EMAIL_SENDER='teste@sender.com<teste@sender.com>'
 
 
 # JWT
-JWT_SECRET='jwtest'
+JWT_SECRET='jwtTeste'
 
 
-SITE_URL='http://localhost:3001'
+SITE_URL='http://localhost:5173'
 
 # ENV
 NODE_ENV='dev'
 
 # ADM
 
-ADMIN_PASSWORD='teste123'
-ADMIN_NAME='teste123'
-ADMIN_CORPORATENAME='teste123'
-ADMIN_EMAIL='teste@teste.com'
-ADMIN_CNPJ='00000000000000'
-ADMIN_PHONE='00000000000'
-ADMIN_ALTPHONE='00000000000'
+ADMIN_PASSWORD=
+ADMIN_NAME=
+ADMIN_CORPORATENAME=
+ADMIN_EMAIL=
+ADMIN_CNPJ=
+ADMIN_PHONE=
+ADMIN_ALTPHONE=
 ADMIN_CONFIRMEDACCOUNT=true
 ADMIN_ISADMIN=true
